--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "chart.js": "^3.9.1",
+        "color-themes-for-google-code-prettify": "^2.0.4",
         "daisyui": "^2.31.0",
         "tippy.js": "^6.3.7"
     }
